== 0.8.3 (2010-06-16)

Just a quick bugfix release.

=== Bugfixes
* Scenario outlines that fail with exception exit process (Aslak Hellesøy)

== 0.8.2 (2010-06-16)

Bugfix release which most importantly fixes an issue with the gem's gemspec.

=== Bufixes
* Fix v8 support which broke in 0.8.1 because of new gherkin API (Aslak Hellesøy)
* Call Around hooks for each example in scenario outlines. (John Firebaugh)
* Remove extraneous tmp file from the gemspec, which broke installation in some environments. (Fernando Brito, Aslak Hellesøy)
* 0.8.1 fails on JRuby (#627 Aslak Hellesøy)

=== New Features
* JavaScript to Hide/Expand Scenarios in HTML report (#621 stkenned)

== 0.8.1 (2010-06-15)

=== Bufixes
* generate test report fails: ast/outline_table.rb fails in status() (#615 Aslak Hellesøy)

=== New Features
* Undefined steps with integers (Given 3 cukes) will generate snippets like (Given /(\d+) cukes/). (Aslak Hellesøy)

== 0.8.0 (2010-06-06)

=== Bugfixes
* Require profile option causes a NoMethodError for Cucumber with JRuby (#601 John Firebaugh)
* Deprecations warnings with Spork + Cucumber + RSpec 2.0. (#619 Brian Cardarella)
* Fixed edge case compatibility problem with Gherkin 1.0.30. (#618 Aslak Hellesøy)

=== New features
* Better table support in the V8 Javascript support (Joseph Wilk)
* JSON formatters (json and json_pretty). (Jari Bakken)

=== Removed features
* The --no-diff option is removed. If you're using RSpec you will *always* get diffs. (Aslak Hellesøy)

=== Changed Features
* Upgraded to be compatible with rspec 2.0.0.beta.10 (Aslak Hellesøy)
* Ruby snippets will use "([^"]*)" instead of "([^\"]*)"$/ - wasn't properly fixed in 0.7.1. (Aslak Hellesøy)
* Preserve the order features files are passed and use this for execution order (#617 Joseph Wilk)

== 0.7.3 (2010-05-17)

=== New Features
* Table cells can now contain escaped bars - \| and escaped backslashes - \\. (Gregory Hnatiuk, Aslak Hellesøy)