@@ -223,6 +223,7 @@ Gem::Specification.new do |s|
      "examples/i18n/zh-TW/features/division.feature",
      "examples/i18n/zh-TW/features/step_definitons/calculator_steps.rb",
      "examples/i18n/zh-TW/lib/calculator.rb",
+     "examples/python/README.textile",
      "examples/python/Rakefile",
      "examples/python/features/fibonacci.feature",
      "examples/python/features/step_definitions/fib_steps.py",
@@ -236,6 +237,7 @@ Gem::Specification.new do |s|
      "examples/ramaze/features/support/env.rb",
      "examples/ramaze/layout/default.html.erb",
      "examples/ramaze/view/index.html.erb",
+     "examples/ruby2python/README.textile",
      "examples/ruby2python/Rakefile",
      "examples/ruby2python/features/fibonacci.feature",
      "examples/ruby2python/features/step_definitions/fib_steps.rb",
