@@ -1,0 +1,9 @@
+Feature: Stubbing
+  In order to test external stuff
+  I want to stub
+
+  Scenario: Stub a transmogrifier
+    Given I have a cardboard box
+    # Comment out the next line to see a failure
+    When I poke it all is good
+  
